# nexus-agent

./: .env.example  .geminiignore  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_zh.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  PROJECT_RULES.md  README.md  agent.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  fix_router.py  mcp_server_config.json  plugin_catalog.json  pyproject.toml  requirements-dev.txt  requirements.txt  seed_db.py  test-jwt.js  test_auth.py  test_jwt.py  test_mcp_fallback.py  test_sandbox.py  test_sandbox_sec.py  test_security.py  test_token.txt  test_tool_metadata.py
.ai-governance/: install-manifest.yaml
.project-context/: install-manifest.yaml
.sisyphus/: boulder.json
alembic/: env.py
app/: main.py
dashboard/: Main.py  app.py  utils.py
docs/: admin_management_plan.md  auth_binding_state_machine.md  auth_channel_strategy.md  cron_scheduler_design.md  device_control_design.md  dynamic_registry_architecture_zh.md  generic_mq_design.md  ha_mcp_fork_plan.md  ha_p0_validation_checklist.md  implementation_plan.md  intelligent_mcp_proxy_zh.md  large_response_handling.md  local_model_benchmark_usage.md  local_model_guide.md  mcp_governance.md  memory_dedup_plan.md  memory_retrieval_plan.md  memskill_design.md  memskill_system.md  openviking_analysis.md  optimization_plan.md  phase30_roadmap.md  priorities.md  product_suggestion_plan.md  progress_report.md  project_focus_and_direction.md  refactoring_plan.md  self_evolution_design.md  self_learning_design.md  semantic_routing_design.md  session_compacting_design.md  skill_architecture_comparison.md  strategic_analysis.md  strategic_analysis_v2.md  task.md  task_backup.md  temperature_query_flow.md  testing_automation_plan.md  walkthrough.md  walkthrough_hierarchical_skills.md  (+2 more)
scripts/: benchmark_llm.py  benchmark_v2.py  check.sh  check_audit.py  (+31 more)
(+364 files in other folders)
